--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vercel": "^32.2.0"
   },
   "resolutions": {
-    "next": "16.1.1"
+    "next": "16.1.1",
+    "@babel/traverse": "7.28.5"
   }
 }
